hphp/hack/test/typecheck/references/pass_by_ref/reffiness_mismatch3.php.exp
File "reffiness_mismatch3.php", line 10, characters 19-19:
Member f has the wrong type (Typing[4341])
File "reffiness_mismatch3.php", line 4, characters 26-27:
This parameter is passed by reference
File "reffiness_mismatch3.php", line 10, characters 21-22:
It is incompatible with a normal parameter
