hphp/hack/test/typecheck/references/pass_by_ref/reffiness_mismatch3.php
<?hh

class A {
  public function f(int &$x): void {}
}

class B extends A {}

class C extends B {
  public function f($x): void {}
}
